--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 title: Contact
-subtitle: For current PCVs in Kyrgyzstan
+subtitle: Get in touch
+description: Get in touch with Friends of Kyrgyzstan
 permalink: /contact/
 layout: page
 hero-image: /assets/images/kyrgyzstan-mountain-landscape.jpg
