--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 title: Contact
 subtitle: Get in touch
 description: Get in touch with Friends of Kyrgyzstan
-permalink: /contact/
+permalink: contact/
 layout: page
 hero-image: /assets/images/kyrgyzstan-mountain-landscape.jpg
 ---
