Button margin edits

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ hero-image: /assets/images/kyrgyzstan-mountain-landscape.jpg
 		<div class="row">
 			<div class="col-md-6">
 				<h2 class="display-5 text-white">SUPPORT OUR CAUSE</h2>
-				<a href="https://www.peacecorpsconnect.org/auth/signup" class="btn btn-lg btn-outline-light mr-3" role="button" aria-pressed="true" target="_blank">Join Now {% include icons/user-friends-solid.svg %}</a>
-				<a href="{{ site.url }}/donate/" class="btn btn-lg btn-outline-light" role="button" aria-pressed="true">Donate Now {% include icons/wallet-solid.svg %}</a>
+				<a href="https://www.peacecorpsconnect.org/auth/signup" class="btn btn-lg btn-outline-light mr-3 mb-2" role="button" aria-pressed="true" target="_blank">Join Now {% include icons/user-friends-solid.svg %}</a>
+				<a href="{{ site.url }}/donate/" class="btn btn-lg btn-outline-light mr-3 mb-2" role="button" aria-pressed="true">Donate Now {% include icons/wallet-solid.svg %}</a>
 			</div>
 		</div>
 	</div>
