--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -27,30 +27,34 @@ permalink: /contact/
 
   <div class="col-lg-8 mt-5 mt-lg-0">
 
-	<form action="https://formspree.io/{{ site.formspree }}" method="post" role="form" class="php-email-form">
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-	  <div class="form-row">
-	    <div class="col form-group">
-	      <input type="text" class="form-control" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-	      <div class="validate"></div>
-	    </div>
-	  </div>
+		<form action="https://formspree.io/{{ site.formspree }}" method="post" role="form" class="php-email-form">
 
-	  <div class="form-row">
-	    <div class="col form-group">
-	      <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-	      <div class="validate"></div>
-	    </div>
-	  </div>
+			<div class="g-recaptcha" data-sitekey="6LdwMdEUAAAAAIFtKd3cTWv-2LnEds0w5AunfEVR"></div>
 
-	  <div class="mb-3">
-	    <div class="loading">Loading</div>
-	    <div class="sent-message">Your message has been sent. Thank you!</div>
-	  </div>
+		  <div class="form-row">
+		    <div class="col form-group">
+		      <input type="text" class="form-control" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+		      <div class="validate"></div>
+		    </div>
+		  </div>
 
-	  <div class="text-center"><button type="submit">Send Message</button></div>
+		  <div class="form-row">
+		    <div class="col form-group">
+		      <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+		      <div class="validate"></div>
+		    </div>
+		  </div>
 
-	</form>
+		  <div class="mb-3">
+		    <div class="loading">Loading</div>
+		    <div class="sent-message">Your message has been sent. Thank you!</div>
+		  </div>
+
+		  <div class="text-center"><button type="submit">Send Message</button></div>
+
+		</form>
 
   </div>
 
