--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -31,8 +31,6 @@ permalink: /contact/
 
 		<form action="https://formspree.io/{{ site.formspree }}" method="post" role="form" class="php-email-form">
 
-			<div class="g-recaptcha" data-sitekey="6LdwMdEUAAAAAIFtKd3cTWv-2LnEds0w5AunfEVR"></div>
-
 		  <div class="form-row">
 		    <div class="col form-group">
 		      <input type="text" class="form-control" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
@@ -47,12 +45,18 @@ permalink: /contact/
 		    </div>
 		  </div>
 
+		  <div class="form-row">
+		    <div class="col form-group">
+					<div class="g-recaptcha" data-sitekey="6LdwMdEUAAAAAIFtKd3cTWv-2LnEds0w5AunfEVR"></div>
+				</div>
+			</div>
+
 		  <div class="mb-3">
 		    <div class="loading">Loading</div>
 		    <div class="sent-message">Your message has been sent. Thank you!</div>
 		  </div>
 
-		  <div class="text-center"><button type="submit">Send Message</button></div>
+		  <div><button type="submit">Send Message</button></div>
 
 		</form>
 
