Update board requirements

--- a/_pages/board.html
+++ b/_pages/board.html
@@ -16,10 +16,10 @@ permalink:		/board/
       In accordance with the <a href="{{ site.url }}/bylaws/">Friends of Kyrgyzstan bylaws</a>, there shall be nine members of the Board of Directors consisting of the five members of the executive committee, the three Regional Directors, and the Kyrgyz Director. The members of the Friends of Kyrgyzstan will elect the Board of Directors for a period of two years with the option to continue on for at least two more terms for a maximum of six years. 
     </p>
     <p>
-      Eligability for board membership:
+      Our board members are:
     </p>
     <ul>
-      <li><i class="ri-check-double-line"></i> Current Peace Corps volunteers in Kyrgyzstan</li>
+      <li><i class="ri-check-double-line"></i> Current and Returned Kyrgyzstan Peace Corps Volunteers</li>
       <li><i class="ri-check-double-line"></i> Staff of the Kyrgyz embassy</li>
       <li><i class="ri-check-double-line"></i> Academic or business leaders involved with Central Asia</li>
     </ul>
