Add honeypot field to formspree form
See the docs: https://help.formspree.io/hc/en-us/articles/360013580813

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -47,6 +47,7 @@ permalink: /contact/
 
 		  <div class="form-row">
 		    <div class="col form-group">
+			    <input type="text" name="_gotcha" style="display:none" />
 					<div class="g-recaptcha" data-sitekey="6LdwMdEUAAAAAIFtKd3cTWv-2LnEds0w5AunfEVR"></div>
 				</div>
 			</div>
